--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root {
 	--color-theme--: #576ee0;
-	--color-theme-hover--: #435acb;
+	--color-theme-dark--: #435acb;
+	--color-theme-hover--: #3348b1;
 }
 
 body {
@@ -39,7 +40,7 @@ body {
 }
 
 .bg-theme-dark {
-	background-color: var(--color-theme-hover--) !important;
+	background-color: var(--color-theme-dark--) !important;
 	color: #fff;
 }
 
@@ -65,12 +66,15 @@ body {
 	transition: 0.4s !important;
 	font-size: 14px;
 	background-color: #fff;
+	z-index: 1;
 }
 
 .navbar .navbar-brand {
 	font-size: 18px;
 	font-weight: bold;
 	letter-spacing: -1px;
+	transition: 0.4s !important;
+	height: 65px;
 }
 
 .nav-item .nav-link {
@@ -84,6 +88,18 @@ body {
 
 .nav-item .nav-link.active {
 	color: var(--color-theme--) !important;
+}
+
+.navbar-collapse {
+	background-color: #fff;
+	box-shadow: 0px ​5px 7px -4px #000 !important;
+}
+
+.dropdown-menu {
+	font-size: 14px !important;
+	font-weight: 600 !important;
+	box-shadow: 0px 0px 5px -2px #000 !important;
+	;
 }
 
 @media screen and (max-width: 350px) {
