--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,19 +62,16 @@ body {
 }
 
 .navbar {
-	height: 75px;
-	transition: 0.4s !important;
 	font-size: 14px;
 	background-color: #fff;
 	z-index: 1;
+	transition: 0.5s !important;
 }
 
 .navbar .navbar-brand {
 	font-size: 18px;
 	font-weight: bold;
 	letter-spacing: -1px;
-	transition: 0.4s !important;
-	height: 65px;
 }
 
 .nav-item .nav-link {
@@ -99,10 +96,14 @@ body {
 	font-size: 14px !important;
 	font-weight: 600 !important;
 	box-shadow: 0px 0px 5px -2px #000 !important;
-	;
 }
 
-@media screen and (max-width: 350px) {
+.navbar-scroll {
+	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
+}
+
+@media screen and (max-width: 400px) {
+
 	.judul-carousel {
 		font-size: 30px;
 		margin-bottom: 1.5rem !important;
@@ -153,13 +154,27 @@ body {
 		padding-right: 1.3rem !important;
 		font-size: 1rem !important;
 	}
-
-	.navbar-scrolled {
-		box-shadow: 0 .5rem 0.7rem rgba(0, 0, 0, .15) !important;
-	}
 }
 
 @media screen and (min-width: 1024px) {
+
+	.card-berita:hover {
+		box-shadow: 0 0 1.5rem rgba(0, 0, 0, .15) !important;
+		transition: .5s;
+	}
+
+	.card-berita {
+		transition: .5s;
+	}
+
+	.navbar-scroll {
+		height: 55px !important;
+	}
+
+	.navbar-normal {
+		height: 75px;
+	}
+
 	.judul-carousel {
 		font-size: 50px;
 		margin-bottom: 3rem !important;
